--- a/Client/package.json
+++ b/Client/package.json
@@ -41,6 +41,7 @@
     "react-table": "7.7.0",
     "stylis": "4.0.13",
     "stylis-plugin-rtl": "2.1.1",
+    "survey-react-ui": "^1.9.78",
     "use-debounce": "^9.0.3",
     "web-vitals": "2.1.4",
     "yup": "0.32.11"
