--- a/Client/package.json
+++ b/Client/package.json
@@ -21,7 +21,8 @@
     "@emotion/react": "11.7.1",
     "@emotion/styled": "11.6.0",
     "@mui/icons-material": "5.4.1",
-    "@mui/material": "5.4.1",
+    "@mui/lab": "^5.0.0-alpha.124",
+    "@mui/material": "^5.4.1",
     "@mui/styled-engine": "5.4.1",
     "@mui/utils": "^5.11.12",
     "@mui/x-data-grid": "^6.0.2",
@@ -35,7 +36,7 @@
     "react-chartjs-2": "3.0.4",
     "react-dom": "17.0.2",
     "react-github-btn": "1.2.1",
-    "react-hook-form": "^7.43.5",
+    "react-hook-form": "^7.43.7",
     "react-router-dom": "6.2.1",
     "react-scripts": "5.0.0",
     "react-table": "7.7.0",
