--- a/Client/package.json
+++ b/Client/package.json
@@ -37,6 +37,7 @@
     "react-dom": "17.0.2",
     "react-github-btn": "1.2.1",
     "react-hook-form": "^7.43.7",
+    "react-push-notification": "^1.3.0",
     "react-router-dom": "6.2.1",
     "react-scripts": "5.0.0",
     "react-table": "7.7.0",
