--- a/Client/package.json
+++ b/Client/package.json
@@ -26,6 +26,7 @@
     "@mui/styled-engine": "5.4.1",
     "@mui/utils": "^5.11.12",
     "@mui/x-data-grid": "^6.0.2",
+    "@react-pdf/renderer": "^3.1.9",
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
