--- a/Client/package.json
+++ b/Client/package.json
@@ -20,6 +20,7 @@
     "@emotion/cache": "11.7.1",
     "@emotion/react": "11.7.1",
     "@emotion/styled": "11.6.0",
+    "@fontsource/rubik": "^4.5.14",
     "@mui/icons-material": "5.4.1",
     "@mui/lab": "^5.0.0-alpha.124",
     "@mui/material": "^5.4.1",
