--- a/Client/package.json
+++ b/Client/package.json
@@ -40,13 +40,16 @@
     "react-dom": "17.0.2",
     "react-github-btn": "1.2.1",
     "react-hook-form": "^7.43.7",
+    "react-popup-alert": "^1.0.7",
     "react-push-notification": "^1.3.0",
     "react-router-dom": "6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "react-table": "7.7.0",
     "stylis": "4.0.13",
     "stylis-plugin-rtl": "2.1.1",
     "survey-react-ui": "^1.9.79",
+    "sweetalert": "^2.1.2",
+    "tapable": "^2.2.1",
     "use-debounce": "^9.0.3",
     "web-vitals": "2.1.4",
     "yup": "0.32.11"
@@ -77,6 +80,7 @@
     ]
   },
   "devDependencies": {
+    "@types/babel__core": "^7.20.0",
     "eslint": "8.8.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "8.3.0",
