--- a/Client/package.json
+++ b/Client/package.json
@@ -37,6 +37,7 @@
     "react": "17.0.2",
     "react-calendar": "^4.2.1",
     "react-chartjs-2": "3.0.4",
+    "react-datepicker": "^4.11.0",
     "react-dom": "17.0.2",
     "react-github-btn": "1.2.1",
     "react-hook-form": "^7.43.7",
