fix error header

--- a/Client/.eslintrc.json
+++ b/Client/.eslintrc.json
@@ -3,7 +3,8 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["plugin:react/recommended", "airbnb", "prettier"],
+  "extends": ["plugin:react/recommended", "airbnb"],
+  // , "prettier"
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
@@ -11,7 +12,8 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["react", "prettier"],
+  "plugins": ["react"],
+  // , "prettier"
   "rules": {
     "react/prop-types": "off",
     "prettier/prettier": "off",
