--- a/Client/.eslintrc.json
+++ b/Client/.eslintrc.json
@@ -15,6 +15,13 @@
   "plugins": ["react"],
   // , "prettier"
   "rules": {
+    // NEW
+    "quotes": ["error", "single"],
+    "indent" : ["error", 2],
+    "no-trailing-spacees" : "error",
+
+
+
     "react/prop-types": "off",
     "prettier/prettier": "off",
     // [
