--- a/Client/package.json
+++ b/Client/package.json
@@ -35,7 +35,7 @@
     "chart.js": "3.4.1",
     "chroma-js": "2.4.2",
     "prop-types": "15.8.1",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-calendar": "^4.2.1",
     "react-chartjs-2": "3.0.4",
     "react-datepicker": "^4.11.0",
