--- a/Client/package.json
+++ b/Client/package.json
@@ -35,6 +35,7 @@
     "chart.js": "3.4.1",
     "chartjs-plugin-datalabels": "^2.2.0",
     "chroma-js": "2.4.2",
+    "openai": "^3.2.1",
     "prop-types": "15.8.1",
     "react": "^17.0.2",
     "react-calendar": "^4.2.1",
