--- a/Client/package.json
+++ b/Client/package.json
@@ -56,6 +56,7 @@
     "tapable": "^2.2.1",
     "use-debounce": "^9.0.3",
     "web-vitals": "2.1.4",
+    "xlsx": "^0.18.5",
     "yup": "0.32.11"
   },
   "scripts": {
