--- a/Client/.eslintrc.json
+++ b/Client/.eslintrc.json
@@ -3,8 +3,11 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["plugin:react/recommended", "airbnb"],
-  // , "prettier"
+  "extends": [
+    "plugin:react/recommended",
+    "airbnb",
+    "prettier"
+  ],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
@@ -12,34 +15,60 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["react"],
-  // , "prettier"
+  "plugins": [
+    "react",
+    "prettier"
+  ],
   "rules": {
     // NEW
-    "quotes": ["error", "single"],
-    "indent" : ["error", 2],
-    "no-trailing-spacees" : "error",
-
-
-
+    "quotes": [
+      "error",
+      "double",
+      {
+        "avoidEscape": true
+      }
+    ],
+    "indent": "off",
+    "no-trailing-spaces": "error",
     "react/prop-types": "off",
-    "prettier/prettier": "off",
-    // [
-    //   "error",
-    //   {
-    //     "endOfLine": "auto"
-    //   }
-    // ],
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto",
+        "singleQuote": false, // Change to "false" for consistency
+        "tabWidth": 2, // Set to "2" spaces for consistency
+        "trailingComma": "es5" // Change to "es5" for consistency
+      }
+    ],
     "default-param-last": "off",
     "react/react-in-jsx-scope": "off",
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [
+          ".js",
+          ".jsx"
+        ]
+      }
+    ],
     "react/jsx-props-no-spreading": [
       1,
       {
         "custom": "ignore"
       }
     ],
-    "react/jsx-curly-spacing": [2, "never"]
+    "react/jsx-curly-spacing": [
+      2,
+      "never"
+    ]
   },
-  "settings": { "import/resolver": { "node": { "paths": ["src"] } } }
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "paths": [
+          "src"
+        ]
+      }
+    }
+  }
 }
