--- a/Client/package.json
+++ b/Client/package.json
@@ -17,17 +17,20 @@
     "npm": ">=6"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.16.0",
     "@emotion/cache": "11.7.1",
-    "@emotion/react": "11.7.1",
-    "@emotion/styled": "11.6.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@fontsource/rubik": "^4.5.14",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "5.4.1",
     "@mui/lab": "^5.0.0-alpha.124",
-    "@mui/material": "^5.4.1",
+    "@mui/material": "^5.13.6",
     "@mui/styled-engine": "5.4.1",
+    "@mui/styles": "^5.13.2",
     "@mui/utils": "^5.11.12",
     "@mui/x-data-grid": "^6.0.2",
+    "@mui/x-date-pickers": "^6.9.0",
     "@react-pdf/renderer": "^3.1.9",
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "12.1.2",
@@ -35,6 +38,8 @@
     "chart.js": "3.4.1",
     "chartjs-plugin-datalabels": "^2.2.0",
     "chroma-js": "2.4.2",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.8",
     "openai": "^3.2.1",
     "prop-types": "15.8.1",
     "react": "^17.0.2",
@@ -49,6 +54,7 @@
     "react-router-dom": "6.2.1",
     "react-scripts": "^5.0.1",
     "react-table": "7.7.0",
+    "react-time-picker": "^6.2.0",
     "stylis": "4.0.13",
     "stylis-plugin-rtl": "2.1.1",
     "survey-react-ui": "^1.9.79",
