--- a/Client/package.json
+++ b/Client/package.json
@@ -22,6 +22,7 @@
     "@emotion/styled": "11.6.0",
     "@fontsource/rubik": "^4.5.14",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "5.4.1",
     "@mui/lab": "^5.0.0-alpha.124",
     "@mui/material": "^5.4.1",
