--- a/Client/package.json
+++ b/Client/package.json
@@ -60,6 +60,7 @@
     "stylis-plugin-rtl": "2.1.1",
     "survey-react-ui": "^1.9.79",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.7.16",
     "tapable": "^2.2.1",
     "use-debounce": "^9.0.3",
     "web-vitals": "2.1.4",
