--- a/Client/package.json
+++ b/Client/package.json
@@ -24,11 +24,13 @@
     "@fontsource/rubik": "^4.5.14",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@material-ui/styles": "^4.11.5",
     "@mui/icons-material": "5.4.1",
     "@mui/lab": "^5.0.0-alpha.124",
     "@mui/material": "^5.13.6",
     "@mui/styled-engine": "5.4.1",
     "@mui/styles": "^5.13.2",
+    "@mui/system": "^5.14.1",
     "@mui/utils": "^5.11.12",
     "@mui/x-data-grid": "^6.0.2",
     "@mui/x-date-pickers": "^6.9.0",
@@ -41,10 +43,11 @@
     "chroma-js": "2.4.2",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.8",
+    "lodash": "^4.17.21",
     "openai": "^3.2.1",
     "prop-types": "15.8.1",
     "react": "^17.0.2",
-    "react-calendar": "^4.2.1",
+    "react-calendar": "^4.4.0",
     "react-chartjs-2": "3.0.4",
     "react-datepicker": "^4.11.0",
     "react-dom": "17.0.2",
@@ -60,13 +63,14 @@
     "stylis-plugin-rtl": "2.1.1",
     "survey-react-ui": "^1.9.79",
     "sweetalert": "^2.1.2",
-    "sweetalert2": "^11.7.16",
+    "sweetalert2": "^11.6.13",
     "tapable": "^2.2.1",
     "use-debounce": "^9.0.3",
     "web-vitals": "2.1.4",
     "xlsx": "^0.18.5",
     "yup": "0.32.11"
   },
+  "homepage": "https://proj.ruppin.ac.il/cgroup47/test2/tar5/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -93,6 +97,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/babel__core": "^7.20.0",
     "eslint": "8.8.0",
     "eslint-config-airbnb": "19.0.4",
